<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TenthBG3">


    <VideoView
        android:id="@+id/tenthbg3_video"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"/>


    <ImageButton
        android:id="@+id/tenth_bg3_imagebtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/setting"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/place_level"
        android:layout_toEndOf="@id/tenth_bg3_imagebtn"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:fontFamily="@font/press_start_2p"
        android:text="Sagñay, Camarines Sur"
        android:textColor="@color/black"
        android:textSize="12sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tenth_bg3_imagebtn"
        android:background="@drawable/convo_bg"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/txt_charac_tenthbg3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Mayari: "
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/press_start_2p"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/txt_convo_tenthbg3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_charac_tenthbg3"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/press_start_2p"
            android:lineSpacingMultiplier="1.5"
            android:text="Oh that’s right! I’ll pay for these first, I’ll be back for a minute. *After Paying* I’m done! But it looks like we spend our whole afternoon celebrating the festival."
            android:textColor="@color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/txt_convo_tenthbg3"
            android:layout_alignParentEnd="true">


            <Button
                android:id="@+id/btn_back_tenthbg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_design"
                android:text="@string/back"
                android:fontFamily="@font/press_start_2p"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="visible"/>

            <Button
                android:id="@+id/btn_next_tenthbg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_design"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/next"
                android:fontFamily="@font/press_start_2p"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="visible"/>


            <Button
                android:id="@+id/btn_okay_tenthbg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_design"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/Okay"
                android:fontFamily="@font/press_start_2p"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone"/>



        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>